# class_2021

./: .gitmodules
notebooks/: Lambda function.ipynb  Parallel-1.ipynb  Python introduction.ipynb  Wave equation.ipynb  serial-optimzaiton.ipynb
notebooks/.ipynb_checkpoints/: Parallel-1-checkpoint.ipynb  Wave equation-checkpoint.ipynb  serial-optimzaiton-checkpoint.ipynb
waveEquation/src/: .CMakeLists.txt.swp  CMakeLists.txt  a.cc
waveEquation/src/lib/: .kernel.h.swp  CMakeLists.txt  kernel.h  kernel.ispc  wave.cc  wave.h
waveEquation/src/python/: CMakeLists.txt  pyacoustic.cc
